# string_art

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
examples/: example_1.rs  example_2.rs
src/: float.rs  grid.rs  hooks.rs  lib.rs  lib_copy.rs.rs  multi_color.rs
src/geometry/: circle.rs  point.rs  segment.rs
src/hooks/: circular.rs
string_art/: Cargo.toml
string_art/examples/: stag.rs  tiger.rs
string_art/examples/alba/: ins.txt
string_art/examples/stag/: instructions_1.txt  instructions_10.txt  instructions_2.txt  instructions_3.txt  instructions_4.txt  instructions_5.txt  instructions_6.txt  instructions_7.txt  instructions_8.txt  instructions_9.txt
string_art/examples/tiger/: dedd.txt  tiger.txt
string_art/src/: algorithm.rs  algorithm_safe_copy.rs  auto_line_config.rs  blur.rs  color.rs  color_groups.rs  color_map.rs  colors.rs  core.rs  core_tests.rs  darkness.rs  ditherer.rs  float.rs  grid.rs  image.rs  lib.rs  line_config.rs  line_selector.rs  multi_color_handle.rs  nail_distancer.rs  nail_table.rs  nail_table_copy.rs  nails.rs  slice.rs  verboser.rs
string_art/src/color/: mod.rs  named.rs
string_art/src/color/config/: map_builder.rs  mod.rs  single.rs
string_art/src/color/config/multi/: mod.rs
string_art/src/color/config/multi/ordering/: auto.rs  manual.rs  mod.rs
string_art/src/color/mapping/: mod.rs  state.rs
string_art/src/geometry/: circle.rs  point.rs  segment.rs
string_art/src/image/: blur.rs  dither.rs  mod.rs
string_art/src/nails/: circular.rs
string_art_cli/: Cargo.toml
string_art_cli/src/: main.rs
string_art_ui/: Cargo.toml  build.rs
string_art_ui/assets/: icon.rgba
string_art_ui/src/: main.rs  params.rs  synced.rs
string_art_ui/src/args/: arg_line_count.rs  darkness_mode.rs  line_config.rs  mod.rs  nail_shape.rs  precision.rs  table_shape.rs
