[package]
name = "string_art"
version = "0.1.0"
edition = "2021"

[dependencies]
bresenham = "0.1.1"
image = { workspace = true }
num-traits = { workspace = true }
num_cpus = "1.16.0"
palette = "0.7.6"
rand = { version = "0.8.5", features = ["small_rng"] }
rayon = { workspace = true }
serde = { workspace = true }
svg = { workspace = true }
thiserror = { workspace = true }
