[package]
name = "string_art"
version = "0.1.0-alpha.1"
edition = "2021"
description = "Convert images into thread patterns for creating string art. It generates detailed instructions in text format and provides graphical previews of the resulting patterns."
license = "MIT"
authors = ["Rubén Cantón Casado <rubcc95@gmail.com>"]
repository = "https://github.com/rubcc95/string_art"
documentation = "https://docs.rs/string_art"

[dependencies]
bresenham = "0.1.1"
image = { workspace = true }
num-traits = { workspace = true }
num_cpus = "1.16.0"
palette = "0.7.6"
rand = { version = "0.8.5", features = ["small_rng"] }
rayon = { workspace = true }
serde = { workspace = true }
svg = { workspace = true }
thiserror = { workspace = true }
