[package]
name = "string_art_cli"
version = "0.1.0"
edition = "2021"

[dependencies]
string_art = { path = "../string_art" }
num-traits = { workspace = true }
palette = { workspace = true }
image = { workspace = true }
clap = { version = "4.5.26", features = ["derive"]}
thiserror = { workspace = true }
