[package]
name = "string_art_ui"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = "1.3.3"
eframe = "0.30.0"
egui = "0.30.0"
image = { workspace = true }
num-traits = { workspace = true }
open = "5.3.2"
rayon = { workspace = true }
rfd = "0.15.2"
serde = { workspace = true }
string_art = { path = "../string_art" }
svg = { workspace = true }
thiserror = { workspace = true }

[target.'cfg(windows)'.build-dependencies]
winres = "0.1" 

[package.metadata.windows]
subsystem = "windows"

[[bin]]
name = "string_art"
path = "src/main.rs"