[package]
name = "string_art_ui"
version = "0.1.0-alpha.1"
edition = "2021"
description = "A gui interface for string_art."
license = "MIT"
authors = ["Rubén Cantón Casado <rubcc95@gmail.com>"]
repository = "https://github.com/rubcc95/string_art"
documentation = "https://docs.rs/string_art_ui"

[dependencies]
bincode = "1.3.3"
eframe = "0.30.0"
egui = "0.30.0"
image = { workspace = true }
num-traits = { workspace = true }
open = "5.3.2"
rayon = { workspace = true }
rfd = "0.15.2"
serde = { workspace = true }
string_art = { version = "0.1.0-alpha.1", path = "../string_art" }
svg = { workspace = true }
thiserror = { workspace = true }

[target.'cfg(windows)'.build-dependencies]
winres = "0.1" 

[package.metadata.windows]
subsystem = "windows"

[[bin]]
name = "string_art"
path = "src/main.rs"